# Wapiti

./: .gitignore  CMakeLists.txt
.github/workflows/: ci-build.yml
src/: wapiti.h
